[gd_scene load_steps=4 format=3 uid="uid://v1kfhkowk1jl"]

[ext_resource type="Script" path="res://Master_Project/Client/Scripts/start_screen_menu.gd" id="1_krmsr"]

[sub_resource type="Environment" id="Environment_deyrl"]
background_mode = 1
background_color = Color(0.190297, 0.205347, 0.239175, 1)
ambient_light_source = 2
ambient_light_color = Color(0.597175, 0.597176, 0.597175, 1)
tonemap_mode = 2
fog_enabled = true
fog_light_color = Color(0.346685, 0.439926, 0.488755, 1)
fog_density = 0.0
fog_sky_affect = 0.5
fog_height = -1.0
fog_height_density = 0.8
adjustment_enabled = true
adjustment_contrast = 1.2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x3ams"]
bg_color = Color(0.744871, 0.186002, 0.198266, 1)

[node name="Start_Screen_Menu" type="Control"]
layout_mode = 3
anchor_left = 0.333333
anchor_right = 0.666667
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_krmsr")
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.0
anchor_right = 2.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.114897, 0.114897, 0.114897, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.182145, 0.233479, 0.36003, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Bomb-Ball!"
horizontal_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(100, 100)
render_target_update_mode = 4

[node name="Headshot3D" type="Node3D" parent="VBoxContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/SubViewportContainer/SubViewport/Headshot3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 2)
fov = 20.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="VBoxContainer/SubViewportContainer/SubViewport/Headshot3D"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 5.16382, 10.0542)
light_color = Color(0.949985, 0.971666, 0.906864, 1)
shadow_enabled = true
directional_shadow_mode = 0
directional_shadow_max_distance = 42.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="VBoxContainer/SubViewportContainer/SubViewport/Headshot3D"]
environment = SubResource("Environment_deyrl")

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Username     "

[node name="Username_TextBox" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "John Wick"
max_length = 20

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Skin_Button" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = " Select Skin "

[node name="Skin_TextBox" type="LineEdit" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Cyborg Ninja"
max_length = 20
editable = false

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
visible = false
layout_mode = 2
text = "Passcode   "

[node name="Passcode_TextBox" type="LineEdit" parent="VBoxContainer/HBoxContainer4"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "optional"
max_length = 20

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Connect_Button" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = " Connect to Server "

[node name="Server_IP_TextBox" type="LineEdit" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "127.0.0.1"
editable = false

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 8
alignment = 1

[node name="Quit_Button" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_x3ams")
text = "Quit"

[connection signal="text_changed" from="VBoxContainer/HBoxContainer3/Username_TextBox" to="." method="_on_username_text_box_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer5/Skin_Button" to="." method="_on_skin_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/Connect_Button" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer2/Quit_Button" to="." method="_on_quit_button_pressed"]
